Replace List#of by Arrays#asList